fix some font sizes for test on mobile device

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -83,7 +83,7 @@
 }
 
 
-// media queries 
+// media queries
 @media screen and (max-width:1048px){
   #contenido{
     h1{
@@ -112,7 +112,7 @@
       font-size: 2.3rem;
     }
     #desproyecto{
-      font-size: .75rem;
+      font-size: .9rem;
       text-align: center;
     }
   }
